# Snoop-Guard

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  config.ini  shippable.yml  snoop-guard.ini  snoop-guard.service
.github/workflows/: ci.yml
cmake/: VerifyVersion.cmake
docs/: sg-ctl.1  sg-daemon.1
packaging/: org.snoopguard.Service.service.in  snoop-guard.desktop  snoop-guard.service.in
src/: client-mode.c  common.h  list-webcam.c  load-config-file.c  main.c  server-mode.c  version.h.in  webmonit.h
src/cli/: sg-json.c  sg-json.h  sgctl.c
src/client/: main.c  main.h
src/common/: load-config-file.c  webmonit.h
src/daemon/: check-mic.c  check-webcam.c  list-webcam.c  load-config-file.c  main.c  main.h  sg-dbus.c  sg-dbus.h  sg-logging.c  sg-logging.h  sg-notification.c  sg-notification.h  sg-policy.c  sg-policy.h  sg-state.c  sg-state.h
src/server/: check-mic.c  check-webcam.c  get-ppid-from-pname.c  list-webcam.c  load-config-file.c  main.c  main.h  sg-logging.c  sg-notification.c  sg-notification.h
tests/: integration.sh  test-core.c
